# Simple

./: .gitignore  BuildOpts.txt  CMakeLists.txt  README.md
docs/: TODO.md  notes.md  simple-grammar.txt
scripts/: setup
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  alias_definition.c  array_param.c  array_param_item.c  array_param_list.c  array_reference.c  assign_eq_item.c  assign_inc_item.c  assignment.c  assignment_item.c  ast.c  ast.h  break_statement.c  cast_statement.c  class_body.c  class_body_item.c  class_definition.c  class_inheritance_item.c  class_inheritance_list.c  class_item.c  compound_name.c  compound_name_list.c  compound_ref_item.c  compound_reference.c  continue_statement.c  create_declaration.c  create_definition.c  create_name.c  create_reference.c  destroy_declaration.c  destroy_definition.c  destroy_name.c  destroy_reference.c  do_clause.c  else_clause.c  except_clause.c  exit_statement.c  expr_and.c  expr_compare.c  expr_equality.c  (+53 more)
src/common/: CMakeLists.txt  buffer.c  cmderrors.c  cmderrors.h  cmdline.c  cmdline.h  cmdparse.c  cmdparse.h  common.h  hash.c  hash.h  llist.c  llist.h  memory.c  memory.h  myassert.h  ptr_lst.c  ptr_lst.h  str.c  str_lst.c  trace.c  trace.h
src/errors/: CMakeLists.txt  errors.c  errors.h
src/parse/: CMakeLists.txt
src/parser/: CMakeLists.txt  alias_definition.c  array_param.c  array_param_item.c  array_param_list.c  array_reference.c  assign_eq_item.c  assign_inc_item.c  assignment.c  assignment_item.c  break_statement.c  cast_statement.c  class_body.c  class_body_item.c  class_definition.c  class_inheritance_item.c  class_inheritance_list.c  class_item.c  compound_name.c  compound_name_list.c  compound_ref_item.c  compound_reference.c  continue_statement.c  create_declaration.c  create_definition.c  create_name.c  create_reference.c  destroy_declaration.c  destroy_definition.c  destroy_name.c  destroy_reference.c  do_clause.c  else_clause.c  except_clause.c  exit_statement.c  expr_and.c  expr_compare.c  expr_equality.c  expr_factor.c  expr_operand.c  (+54 more)
src/scanner/: CMakeLists.txt  fileio.c  fileio.h  scanner.c  scanner.h  token_defs.c  token_defs.h  tokens.c  tokens.h
src/simple/: CMakeLists.txt  main.c
src/symbols/: CMakeLists.txt  class.c  class.h  function.c  function.h  import.c  import.h  local.c  local.h  namespace.c  namespace.h  symbols.c  symbols.h  variable.c  variable.h
src/tokens/: CMakeLists.txt  mk_tokens.py  token_defs.c  token_defs.h  token_symbols.h.template  tokens.c  tokens.h
test/: README.md
test/templates/: README.md  gen_ast_files.py  gen_boilerplate.py  gen_lists.py  gen_parse_files.py  gen_token_defs.py  main.c  non_terminals.txt  simple-grammar.txt  terminals.txt  tokens.txt  translate.txt
testing/: CMakeLists.txt
testing/inputs/correct/: arrays.simp  assignment.simp  basic.simp  basic1.simp  basic_elif.simp  basic_else.simp  basic_except.simp  basic_final.simp  basic_if.simp  basic_try.simp  bool.simp  break.simp  class_content.simp  class_decl.simp  class_def.simp  continue.simp  create_ref.simp  destroy_ref.simp  do.simp  empty.simp  empty_args.simp  exit.simp  expression.simp  float.simp  for.simp  func_def.simp  func_ref.simp  if.simp  inline.simp  item_error1.simp  item_error2.simp  items.simp  loop_body.simp  mixed.simp  mixed1.simp  nested.simp  nested_elif.simp  nested_else.simp  nested_except.simp  nested_final.simp  (+5 more)
testing/parser/: CMakeLists.txt  main.c
testing/scanner/: CMakeLists.txt  main.c  test_input1.txt
testing/templates/: README.md  gen_boilerplate.py  mk_testdirs.py
